# dev

c/argumentts/: CMakeLists.txt  in.txt  main.c
c/cmd_args/: CMakeLists.txt  main  main.c
c/cmd_args/.cache/clangd/index/: main.c.4C6D2AE430E16B04.idx
c/colocviu/: CMakeLists.txt  in.txt  main.c
c/colocviu/.cache/clangd/index/: main.c.4F99BEAC92BDDCBC.idx
c/data_structures/sll/: list  main.c
c/lab_practice/: CMakeLists.txt  main.c
c/lab_practice/.cache/clangd/index/: main.c.3C2AE42A20B40B2A.idx
c/structs_and_unions/: CMakeLists.txt  main.c
c/structs_and_unions/.cache/clangd/index/: main.c.090BF67B24EF0A7C.idx
c/tema11/: CMakeLists.txt  main.c  sah.c  sah.h
c/tema11/.cache/clangd/index/: main.c.97340A1140BF894B.idx  sah.c.57EF700FE62023BD.idx  sah.h.5C1304F580F246C1.idx
c/tema3/: Afrasinei_Serban_s03_prb1.c  Afrasinei_Serban_s03_prb2.c  CMakeLists.txt
c/tema3/.cache/clangd/index/: main.c.C88B272E2C03BD86.idx
c/tema6/: CMakeLists.txt  main.c
c/tema6/.cache/clangd/index/: main.c.39434293E6F001FF.idx
c/teme_lab_verif/: CMakeLists.txt  main.c
c/teme_lab_verif/.cache/clangd/index/: main.c.7CB49319A82CC468.idx
java/design-patterns/strategy/: pom.xml
math/linalg/: 4d_subspace.py  line_subspace.py  plane_subspace.py
mobile/expo/beb/: app.json  package-lock.json  package.json
python/upwork/idk/: input.txt  lesen.py
rustlings/exercises/move_semantics/: move_semantics4.rs
rustlings/exercises/vecs/: vecs2.rs
web/playground/: package.json
